--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
   <property name="eclipse.proj.dir.common"
             location="eclipse_ws/biobank.common" />
   <property name="eclipse.proj.dir.tools"
-            location="eclipse_ws/biobnk2.tools" />
+            location="eclipse_ws/biobank2.tools" />
   <property name="eclipse.proj.dir.junit"
             location="eclipse_ws/biobank2.tests" />
   <property name="scripts.proj.dir" location="scripts" />
@@ -65,7 +65,7 @@
   </condition>
   <condition property="isHostAicml5">
     <equals arg1="${host.name}"
-            arg2="aicml5"
+            arg2="aicml5.cs.ualberta.ca"
             casesensitive="true"
             trim="true" />
   </condition>
@@ -392,7 +392,7 @@
           overwrite="true" />
   </target>
   <target name="hostAicml5" if="isHostAicml5">
-    <copy file="${secu-log.dir}/jboss/${host.name}.cs.ualberta.ca.keystore"
+    <copy file="${secu-log.dir}/jboss/${host.name}.keystore"
           tofile="${env.JBOSS_HOME}/server/default/conf/biobank.keystore"
           overwrite="true" />
   </target>
@@ -431,7 +431,7 @@
           message="JBOSS_HOME environment variable not defined" />
   </target>
   <target name="deploy-jboss"
-          depends="jboss.home.env,sdk-files,package-webapp-orm,check-jboss-uptodate,hostAicmlMed,hostCbsr,hostCbsrTraining,hostLocal,server-manifest"
+          depends="jboss.home.env,sdk-files,package-webapp-orm,check-jboss-uptodate,hostAicmlMed,hostAicml5,hostCbsr,hostCbsrTraining,hostLocal,server-manifest"
           description="deploys the caCORE SDK webapp to JBoss"
           unless="jboss.uptodate">
     <copy file="${secu-log.dir}/jboss/login-config.xml"
