--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -51,14 +51,14 @@
       </perspective>
       <perspective
             class="edu.ualberta.med.biobank.rcp.perspective.ProcessingPerspective"
-            icon="icons/patientPerspective.png"
+            icon="icons/processingPerspective.png"
             id="edu.ualberta.med.biobank.perspective.processing"
             name="Processing View">
       </perspective>
       <perspective
-            class="edu.ualberta.med.biobank.rcp.perspective.AliquotManagementPerspective"
-            id="edu.ualberta.med.biobank.perspective.aliquotsManagement"
-            name="Samples Management Perspective">
+            class="edu.ualberta.med.biobank.rcp.perspective.LinkAssignPerspective"
+            id="edu.ualberta.med.biobank.perspective.linkAssign"
+            name="Link/Assign Perspective">
       </perspective>
    </extension>
    <extension
@@ -1037,7 +1037,7 @@
             </command>
             <command
                commandId="edu.ualberta.med.biobank.commands.processingAdmin"
-               icon="icons/patientPerspective.png"
+               icon="icons/processingPerspective.png"
                label="Processing View"
                style="push">
             </command>
@@ -1156,7 +1156,7 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.processingAdmin"
-                  icon="icons/patientPerspective.png"
+                  icon="icons/processingPerspective.png"
                   label="Processing View"
                   style="push">
             </command>
@@ -2319,7 +2319,7 @@
       <view
             allowMultiple="false"
             class="edu.ualberta.med.biobank.views.PatientAdministrationView"
-            icon="icons/patientPerspective.png"
+            icon="icons/patientView.png"
             id="edu.ualberta.med.biobank.views.PatientsAdminView"
             name="Patients"
             restorable="true">
