--- a/build.xml
+++ b/build.xml
@@ -484,10 +484,9 @@
       <transaction src="${data.sql.dir}/createIndices.sql" />
       <transaction src="${data.sql.dir}/uniqueConstraints.sql" />
       <transaction src="${data.sql.dir}/activityStatus.sql" />
-      <transaction src="${data.sql.dir}/globalPvAttr.sql" />
-      <transaction src="${data.sql.dir}/pvAttrType.sql" />
-      <transaction src="${data.sql.dir}/sourceVesselTypes.sql" />
-      <transaction src="${data.sql.dir}/sampleTypes.sql" />
+      <transaction src="${data.sql.dir}/globalEventAttr.sql" />
+      <transaction src="${data.sql.dir}/eventAttrType.sql" />
+      <transaction src="${data.sql.dir}/specimenTypes.sql" />
       <transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
       <transaction src="${data.sql.dir}/shippingMethod.sql" />
       <transaction src="${secu-log.dir}/schemaSecurity.sql" />
