--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
   <property name="java.client.version.num" value="1.4.0.pre" />
 
   <property environment="env" />
-  <property name="host" value="aicml5.cs.ualberta.ca" />
+  <property name="host" value="aicml-med.cs.ualberta.ca" />
   <!--property name="${host}/" value="" /-->
   <property name="cacore.sdk.dir" location="caCORE_SDK/sdk" />
   <property name="cacore.sdk.filename" value="caCORE_SDK_411.tar.gz" />
@@ -599,9 +599,9 @@
     <include name="**/tools/utils/*.class" />
   </fileset>
 
-  <!-- 
+  <!--
     build-validators uses a different destination directory from build-hbmstrings and
-    build-modelextender due to dependency restrictions 
+    build-modelextender due to dependency restrictions
   -->
   <target name="build-validators" depends="cacore-untar">
     <echo message="Building hibernate validators generation tool" />
@@ -840,11 +840,11 @@
     <delete dir="${eclipse.proj.dir.tools}/output" />
     <delete file="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
     <delete>
-      <fileset dir="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/peer" 
+      <fileset dir="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/peer"
       includes="*Peer.java"/>
     </delete>
     <delete>
-      <fileset dir="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/wrappers/base" 
+      <fileset dir="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/wrappers/base"
       includes="*BaseWrapper.java"/>
     </delete>
   </target>
