--- a/eclipse_ws/biobank.common/.settings/org.eclipse.jdt.ui.prefs
+++ b/eclipse_ws/biobank.common/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Fri Jan 15 16:22:11 MST 2010
+#Thu Mar 03 11:43:17 MST 2011
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
@@ -68,6 +68,7 @@ sp_cleanup.add_missing_deprecated_annotations=true
 sp_cleanup.add_missing_methods=false
 sp_cleanup.add_missing_nls_tags=false
 sp_cleanup.add_missing_override_annotations=true
+sp_cleanup.add_missing_override_annotations_interface_methods=false
 sp_cleanup.add_serial_version_id=false
 sp_cleanup.always_use_blocks=true
 sp_cleanup.always_use_parentheses_in_expressions=false
