--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1629,14 +1629,14 @@
       <editor
             class="edu.ualberta.med.biobank.forms.AliquotViewForm"
             default="false"
-            icon="icons/aliquot.png"
+            icon="icons/specimen.png"
             id="edu.ualberta.med.biobank.forms.AliquotViewForm"
             name="Aliquot View">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.AliquotEntryForm"
             default="false"
-            icon="icons/aliquot.png"
+            icon="icons/specimen.png"
             id="edu.ualberta.med.biobank.forms.AliquotEntryForm"
             name="Aliquot Entry">
       </editor>
@@ -1708,11 +1708,11 @@
             name="Decode Plate">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.AliquotListViewForm"
+            class="edu.ualberta.med.biobank.forms.SpecimenListViewForm"
             default="false"
-            icon="icons/aliquot.png"
-            id="edu.ualberta.med.biobank.forms.AliquotListViewForm"
-            name="Aliquot List">
+            icon="icons/specimen.png"
+            id="edu.ualberta.med.biobank.forms.SpecimenListViewForm"
+            name="Specimen List">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.PvListViewForm"
