--- a/build.xml
+++ b/build.xml
@@ -54,10 +54,10 @@
   <condition property="debugFileExtension" value="-debug" else="">
     <equals arg1="${debug}" arg2="true" casesensitive="false" trim="true" />
   </condition>
-  <condition property="LOG4J_LEVEL_WARN" value="warn" else="info">
+  <condition property="LOG4J_LEVEL_WARN" value="warn" else="error">
     <equals arg1="${debug}" arg2="true" casesensitive="false" trim="true" />
   </condition>
-  <condition property="LOG4J_LEVEL_DEBUG" value="debug" else="info">
+  <condition property="LOG4J_LEVEL_DEBUG" value="debug" else="error">
 	<equals arg1="${debug}" arg2="true" casesensitive="false" trim="true" />
   </condition>
   <condition property="isHostAicmlMed">
