--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1886,6 +1886,7 @@
       name="Request Receiving Form">
 </editor>
 <editor
+      class="edu.ualberta.med.biobank.forms.ProcessingEventEntryForm"
       default="false"
       icon="icons/processingEvent.png"
       id="edu.ualberta.med.biobank.forms.ProcessingEventEntryForm"
