--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1602,18 +1602,18 @@
             name="Cabinet Link/Assign Entry ">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.AliquotViewForm"
+            class="edu.ualberta.med.biobank.forms.SpecimenViewForm"
             default="false"
             icon="icons/specimen.png"
-            id="edu.ualberta.med.biobank.forms.AliquotViewForm"
-            name="Aliquot View">
+            id="edu.ualberta.med.biobank.forms.SpecimenViewForm"
+            name="Specimen View">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.AliquotEntryForm"
+            class="edu.ualberta.med.biobank.forms.SpecimenEntryForm"
             default="false"
             icon="icons/specimen.png"
-            id="edu.ualberta.med.biobank.forms.AliquotEntryForm"
-            name="Aliquot Entry">
+            id="edu.ualberta.med.biobank.forms.SpecimenEntryForm"
+            name="Specimen Entry">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.SpecimenTypesEntryForm"
