working on InnoDB database changes

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -210,7 +210,7 @@ DB_USERNAME=dummy
 DB_PASSWORD=ozzy498
 DB_DRIVER=com.mysql.jdbc.Driver
 
-DB_DIALECT=org.hibernate.dialect.MySQLDialect
+DB_DIALECT=org.hibernate.dialect.MySQLInnoDBDialect
 
 ##################################################################################
 #  CSM SECURITY DATABASE CONNECTION PROPERTIES
