--- a/build.xml
+++ b/build.xml
@@ -484,10 +484,9 @@
       <transaction src="${data.sql.dir}/createIndices.sql" />
       <transaction src="${data.sql.dir}/uniqueConstraints.sql" />
       <transaction src="${data.sql.dir}/activityStatus.sql" />
-      <transaction src="${data.sql.dir}/globalPvAttr.sql" />
-      <transaction src="${data.sql.dir}/pvAttrType.sql" />
-      <transaction src="${data.sql.dir}/sourceVessels.sql" />
-      <transaction src="${data.sql.dir}/sampleTypes.sql" />
+      <transaction src="${data.sql.dir}/eventAttrType.sql" />
+      <transaction src="${data.sql.dir}/globalEventAttr.sql" />
+      <transaction src="${data.sql.dir}/specimenTypes.sql" />
       <transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
       <transaction src="${data.sql.dir}/shippingMethod.sql" />
       <transaction src="${secu-log.dir}/schemaSecurity.sql" />
@@ -756,8 +755,40 @@
     </javac>
   </target>
 
-  <target name="package-codegen-orm"
+  <target name="compile-generated-beans" description="REDO:: Compiles the generated beans">
+    <copy todir="${cacore.sdk.dir}\${output.src.dir}\edu/ualberta/med/biobank/model" overwrite="true">
+      <fileset dir="sdk_conf/specialSrc" />
+    </copy>
+  	<delete>
+	  <fileset dir="${cacore.sdk.dir}\${build.classes.dir}"/>
+    </delete>
+
+	<javac srcdir="${cacore.sdk.dir}\${output.src.dir}" destdir="${cacore.sdk.dir}\${build.classes.dir}"
+		debug="true" includeantruntime="false" >
+	  <classpath >
+	  	 <fileset dir="${cacore.sdk.dir}\${system.dir}\${system.lib.dir}">
+	  	            <include name="*.jar"/>
+	  	  </fileset>
+	  </classpath>
+	  <include name="**/*.java"/>
+	</javac>
+  </target>
+
+  <target name="package-codegen-orm" depends="compile-generated-beans"
           description="REDO:: Packages the generated ORM and bean artifacts">
+	<jar destfile="${cacore.sdk.dir}\${build.jar.dir}\${bean.file}" basedir="${cacore.sdk.dir}\${build.classes.dir}">
+			<manifest>
+				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
+			</manifest>
+			<fileset dir="${cacore.sdk.dir}\${output.src.dir}" includes="**/*.java" />
+	</jar>
+	<copy file="${cacore.sdk.dir}\${build.jar.dir}\${bean.file}"
+		tofile="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib\${bean.file}"/>
+	<copy file="${cacore.sdk.dir}\${build.jar.dir}\${bean.file}"
+		tofile="${cacore.sdk.dir}/output/biobank2/package/ws-client/lib\${bean.file}"/>
+	<copy file="${cacore.sdk.dir}\${build.jar.dir}\${bean.file}"
+		tofile="${cacore.sdk.dir}/output/biobank2/package/local-client/lib\${bean.file}"/>
     <jar destfile="${cacore.sdk.dir}\${build.jar.dir}\${orm.file}"
          basedir="${cacore.sdk.dir}\${output.src.dir}">
       <manifest>
