--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -151,14 +151,8 @@
       </command>
       <command
             categoryId="org.eclipse.ui.category.window"
-            id="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
-            name="Sample Processing">
-         <commandParameter
-               id="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-               name="Type"
-               optional="false"
-               values="edu.ualberta.med.biobank.handlers.OpenSampleProcessParameters">
-         </commandParameter>
+            id="edu.ualberta.med.biobank.commands.patients.scanLink"
+            name="Scan Link">
       </command>
        <command
              categoryId="org.eclipse.ui.category.edit"
@@ -290,6 +284,16 @@
              id="biobank2.command.category.server"
              name="Server">
        </category>
+       <command
+             categoryId="org.eclipse.ui.category.window"
+             id="edu.ualberta.med.biobank.commands.patients.scanAssign"
+             name="Scan Assign">
+       </command>
+       <command
+             categoryId="org.eclipse.ui.category.window"
+             id="edu.ualberta.med.biobank.commands.patients.cabinetLinkAssign"
+             name="Cabinet Link Assign">
+       </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
@@ -502,8 +506,8 @@
          </enabledWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.OpenSampleProcessFormHandler"
-            commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm">
+            class="edu.ualberta.med.biobank.handlers.ScanLinkHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.scanLink">
          <activeWhen>
             <and>
               <reference
@@ -782,6 +786,44 @@
             </reference>
          </enabledWhen>
       </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.ScanAssignHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.scanAssign">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="biobank2.processingPerspectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <reference
+                  definitionId="biobank2.processingPerspectiveSelected">
+            </reference>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.CabinetLinkAssignHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.cabinetLinkAssign">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="biobank2.processingPerspectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+              <reference
+                    definitionId="biobank2.processingPerspectiveSelected">
+              </reference>
+         </enabledWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -920,34 +962,22 @@
                   visible="true">
             </separator>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.scanLink"
                   icon="icons/scanLink.png"
                   label="Scan Link"
                   style="push">
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.ScanLinkEntryForm">
-               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.scanAssign"
                   icon="icons/scanAssign.png"
                   label="Scan Assign"
                   style="push">
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.ScanAssignEntryForm">
-               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.cabinetLinkAssign"
                   icon="icons/cabinetLinkAssign.png"
                   label="Cabinet Link/Assign"
                   style="push">
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm">
-               </parameter>
             </command>
             <separator
                   name="biobank2.separator4"
@@ -1170,7 +1200,7 @@
                   tooltip="Delete Selected Item">
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.scanLink"
                   icon="icons/scanLink.png"
                   label="Scan Link"
                   style="push">
@@ -1180,13 +1210,9 @@
                         definitionId="biobank2.processingPerspectiveSelected">
                   </reference>
                </visibleWhen>
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.ScanLinkEntryForm">
-               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.scanAssign"
                   icon="icons/scanAssign.png"
                   label="Scan Assign"
                   style="push">
@@ -1196,13 +1222,9 @@
                         definitionId="biobank2.processingPerspectiveSelected">
                   </reference>
                </visibleWhen>
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.ScanAssignEntryForm">
-               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+                  commandId="edu.ualberta.med.biobank.commands.patients.cabinetLinkAssign"
                   icon="icons/cabinetLinkAssign.png"
                   label="Cabinet Link/Assign"
                   style="push">
@@ -1212,10 +1234,6 @@
                         definitionId="biobank2.processingPerspectiveSelected">
                   </reference>
                </visibleWhen>
-               <parameter
-                     name="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-                     value="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm">
-               </parameter>
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.search"
@@ -1979,34 +1997,22 @@
             sequence="M3+V">
       </key>
       <key
-            commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+            commandId="edu.ualberta.med.biobank.commands.patients.scanLink"
             contextId="edu.ualberta.med.biobank.perspective.processing"
             schemeId="biobank2.scheme"
             sequence="M2+M3+L">
-         <parameter
-               id="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-               value="edu.ualberta.med.biobank.forms.ScanLinkEntryForm">
-         </parameter>
       </key>
       <key
-            commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+            commandId="edu.ualberta.med.biobank.commands.patients.scanAssign"
             contextId="edu.ualberta.med.biobank.perspective.processing"
             schemeId="biobank2.scheme"
             sequence="M2+M3+A">
-         <parameter
-               id="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-               value="edu.ualberta.med.biobank.forms.ScanAssignEntryForm">
-         </parameter>
       </key>
       <key
-            commandId="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm"
+            commandId="edu.ualberta.med.biobank.commands.patients.cabinetLinkAssign"
             contextId="edu.ualberta.med.biobank.perspective.processing"
             schemeId="biobank2.scheme"
             sequence="M2+M3+C">
-         <parameter
-               id="edu.ualberta.med.biobank.commands.patients.openSampleProcessForm.editorId"
-               value="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm">
-         </parameter>
       </key>
       <key
             commandId="edu.ualberta.med.biobank.commands.reset"
@@ -2442,7 +2448,7 @@
    <extension
          point="org.eclipse.core.expressions.propertyTesters">
       <propertyTester
-            class="edu.ualberta.med.biobank.handlers.AdapterBasePropertyTester"
+            class="edu.ualberta.med.biobank.expressions.AdapterBasePropertyTester"
             id="biobank2.adapterBasePropertyTester"
             namespace="biobank2"
             properties="canDelete"
