fixed current center for samples

--- a/eclipse_ws/biobank2.tools/conf/query.properties
+++ b/eclipse_ws/biobank2.tools/conf/query.properties
@@ -1,18 +1,19 @@
 # Version 1.3.1
 
 v131.getAliquots = \
-	select study.name_short,clinic.name_short,pnumber, \
-    inventory_id,link_date,quantity,st.name \
-    from aliquot \
-    join sample_type as st on st.id=aliquot.sample_type_id \
+	select site.name_short,study.name_short,clinic.name_short,pnumber, \
+	inventory_id,link_date,quantity,st.name \
+	from aliquot \
+	join sample_type as st on st.id=aliquot.sample_type_id \
     join patient_visit as pv on pv.id=aliquot.patient_visit_id \
     join clinic_shipment_patient as csp on csp.id=pv.clinic_shipment_patient_id \
     join abstract_shipment as aship on aship.id=csp.clinic_shipment_id \
     join clinic on clinic.id=aship.clinic_id \
     join patient on patient.id=csp.patient_id \
     join study on study.id=patient.study_id \
+	join site on site.id=aship.site_id \
     where aship.discriminator='ClinicShipment' \
-    order by study.name_short,clinic.name_short,pnumber,inventory_id,link_date
+    order by site.name_short,study.name_short,clinic.name_short,pnumber,inventory_id,link_date
 v131.getPvSourceVessels = \
 	select study.name_short,clinic.name_short,pnumber, \
     if(psv.time_drawn is null,pv.date_drawn, \
@@ -46,11 +47,18 @@ v131.getSiteContainers = \
 	from site \
 	join container_type ct on ct.site_id=site.id \
 	order by site.name_short,ct.name_short
-	
+v131.ClinicShipments = \
+	select clinic.name_short,clinic.sends_shipments,aship.waybill,aship.date_shipped,aship.date_received,aship.box_number,sm.name \
+	from clinic \
+	join abstract_shipment aship on aship.clinic_id=clinic.id \
+	join shipping_method sm on sm.id=aship.shipping_method_id \
+	where aship.discriminator='ClinicShipment' \
+	order by clinic.name,clinic.sends_shipments,aship.waybill,aship.date_shipped,aship.date_received,aship.box_number,sm.name
+		
 # Version 1.4.0    
     
 v140.getAliquotedSpecimens = \
-	select study.name_short,center.name_short,pnumber, \
+	select ctr2.name_short,study.name_short,center.name_short,pnumber, \
     inventory_id,spc.created_at,quantity,st.name \
     from specimen as spc \
     inner join specimen_type as st on st.id=spc.specimen_type_id \
@@ -59,8 +67,10 @@ v140.getAliquotedSpecimens = \
     join center on center.id=oi.center_id \
     join patient on patient.id=ce.patient_id \
     join study on study.id=patient.study_id \
-    where center.discriminator='Clinic' and inventory_id not like 'sw upgrade%' \
-    order by study.name_short,center.name_short,pnumber,inventory_id,spc.created_at;
+	join center ctr2 on ctr2.id=spc.current_center_id \
+    where center.discriminator='Clinic' and parent_specimen_id is not null \
+	and ctr2.discriminator='Site' \
+    order by ctr2.name_short,study.name_short,center.name_short,pnumber,inventory_id,spc.created_at
 v140.getSourceSpecimens = \
 	select study.name_short,center.name_short,pnumber, \
     spc.created_at,pe.created_at,st.name \
@@ -96,3 +106,11 @@ v140.getSiteContainers = \
 	join container_type ct on ct.site_id=center.id \
 	where center.discriminator='Site' \
 	order by center.name_short,ct.name_short
+v140.ClinicShipments = \
+	select center.name_short,center.sends_shipments,si.waybill,si.sent_at,si.received_at,si.box_number,sm.name \
+	from center \
+	join origin_info oi on oi.center_id=center.id \
+	join shipment_info si on si.id=oi.shipment_info_id \
+	join shipping_method sm on sm.id=si.shipping_method_id \
+	where center.discriminator='Clinic' \
+	order by center.name_short,center.sends_shipments,si.waybill,si.sent_at,si.received_at,si.box_number,sm.name	
