fixed specimen positions in database upgrade script

--- a/eclipse_ws/biobank2.tools/conf/query.properties
+++ b/eclipse_ws/biobank2.tools/conf/query.properties
@@ -29,6 +29,13 @@ v131.getPvSourceVessels = \
     join source_vessel as sv on sv.id=psv.source_vessel_id \
     order by study.name_short,clinic.name_short,pnumber, \
     date_drawn,date_processed,sv.name
+v131.getAliquotStorageSite = \
+	select site.name_short,inventory_id \
+	from aliquot aq \
+	join abstract_position ap on ap.aliquot_id=aq.id \
+	join container ct on ct.id=ap.container_id \
+	join site on site.id=ct.site_id \
+	order by site.name_short,inventory_id 
 v131.getSiteStudies = \
     select site.name_short,study.name_short \
 	from site \
@@ -85,6 +92,14 @@ v140.getSourceSpecimens = \
     where center.discriminator='Clinic' and spc.parent_specimen_id is null \
     order by study.name_short,center.name_short,pnumber, \
     spc.created_at,pe.created_at,st.name
+v140.getSpecimenStorageSite = \
+	select center.name_short,spc.inventory_id \
+	from specimen spc \
+	join abstract_position ap on ap.specimen_id=spc.id \
+	join container ct on ct.id=ap.container_id \
+	join center on center.id=ct.site_id \
+	where center.discriminator='Site' \
+	order by center.name_short,spc.inventory_id
 v140.getSiteStudies = \
 	select center.name_short,study.name_short \
 	from center \
