more tests for database upgrade script

--- a/eclipse_ws/biobank2.tools/conf/query.properties
+++ b/eclipse_ws/biobank2.tools/conf/query.properties
@@ -54,13 +54,25 @@ v131.getSiteContainers = \
 	from site \
 	join container_type ct on ct.site_id=site.id \
 	order by site.name_short,ct.name_short
-v131.ClinicShipments = \
+v131.getClinicShipments = \
 	select clinic.name_short,clinic.sends_shipments,aship.waybill,aship.date_shipped,aship.date_received,aship.box_number,sm.name \
 	from clinic \
 	join abstract_shipment aship on aship.clinic_id=clinic.id \
 	join shipping_method sm on sm.id=aship.shipping_method_id \
 	where aship.discriminator='ClinicShipment' \
 	order by clinic.name,clinic.sends_shipments,aship.waybill,aship.date_shipped,aship.date_received,aship.box_number,sm.name
+v131.getDispatchAliquots = \
+	select ss.name_short as sender,sr.name_short as receiver,aq.inventory_id, \
+	aship.date_shipped,aship.date_received,sm.name \
+	from aliquot aq \
+	join dispatch_shipment_aliquot dsa on dsa.aliquot_id=aq.id \
+	join abstract_shipment aship on aship.id=dsa.dispatch_shipment_id \
+	join site ss on ss.id=aship.dispatch_sender_id \
+	join site sr on sr.id=aship.dispatch_receiver_id \
+	join study on study.id=aship.study_id \
+	join shipping_method sm on sm.id=aship.shipping_method_id \
+	order by ss.name_short,sr.name_short,aq.inventory_id, \
+	aship.date_shipped,aship.date_received,sm.name
 		
 # Version 1.4.0    
     
@@ -121,7 +133,7 @@ v140.getSiteContainers = \
 	join container_type ct on ct.site_id=center.id \
 	where center.discriminator='Site' \
 	order by center.name_short,ct.name_short
-v140.ClinicShipments = \
+v140.getClinicShipments = \
 	select center.name_short,center.sends_shipments,si.waybill,si.sent_at,si.received_at,si.box_number,sm.name \
 	from center \
 	join origin_info oi on oi.center_id=center.id \
@@ -129,3 +141,15 @@ v140.ClinicShipments = \
 	join shipping_method sm on sm.id=si.shipping_method_id \
 	where center.discriminator='Clinic' \
 	order by center.name_short,center.sends_shipments,si.waybill,si.sent_at,si.received_at,si.box_number,sm.name	
+v140.getDispatchSpecimens = \
+	select sc.name_short as sender,rc.name_short as receiver,spc.inventory_id, \
+	si.sent_at,si.received_at,sm.name \
+	from specimen spc \
+	join dispatch_specimen ds on ds.specimen_id=spc.id \
+	join dispatch d on d.id=ds.dispatch_id \
+	join center sc on sc.id=d.sender_center_id \
+	join center rc on rc.id=d.receiver_center_id \
+	join shipment_info si on si.id=d.shipment_info_id \
+	join shipping_method sm on sm.id=si.shipping_method_id \
+	order by sc.name_short,rc.name_short,spc.inventory_id, \
+	si.sent_at,si.received_at,sm.name
