cleanup in specimen data model diagram

--- a/eclipse_ws/biobank2.tools/conf/query.properties
+++ b/eclipse_ws/biobank2.tools/conf/query.properties
@@ -73,7 +73,17 @@ v131.getDispatchAliquots = \
 	join shipping_method sm on sm.id=aship.shipping_method_id \
 	order by ss.name_short,sr.name_short,aq.inventory_id, \
 	aship.date_shipped,aship.date_received,sm.name
-		
+v131.getPatientVisits = \
+	select clinic.name_short,pnumber,pv.date_drawn,count(*) as aliquots \
+	from patient_visit pv \
+	join clinic_shipment_patient as csp on csp.id=pv.CLINIC_SHIPMENT_PATIENT_ID \
+    join abstract_shipment as aship on aship.id=csp.CLINIC_SHIPMENT_ID \
+	join patient on patient.id=csp.patient_id \
+	join clinic on clinic.id=aship.clinic_id \
+	join aliquot aq on aq.patient_visit_id=pv.id \
+	group by clinic.name_short,pnumber,pv.date_drawn,pv.date_drawn \
+	order by clinic.name_short,pnumber,pv.date_drawn,pv.date_drawn
+
 # Version 1.4.0    
     
 v140.getAliquotedSpecimens = \
